Java Marine API - RELEASE NOTES
Version @VERSION@ (b@BUILD_ID@)
<http://ktuukkan.github.io/marine-api/>

This is a pre-alpha release, major API changes may be introduced in future
versions. Released on @RELEASE_DATE@.

CHANGES

 * SentenceValidator now accepts different combinations of newline and carriage
   return characters.
  
 * GSV sentence may now contain less than four satellite infos.

 * Date class; fixed month index off-by-one in toDate() method.
 
 * SentenceReader; I/O exceptions are logged only when ExceptionHandler is not
   set. InputStream is now checked with ready() before reading.
   
 * SentenceParser; hasValue() now checks fields content explicitly.
 
 * DPTSentence; getMaximum() return value changed from int to double.
 
 * XDRSentence; fixed fields indexing bug in getMeasurements(). 
 
NEW FEATURES

 * SentenceReader; DataListener interface for receiving any non-NMEA data that
   has been read from current data source.
   
 * Support for VBW sentences; dual ground/water speed.
 
 * SentenceFactory; available can be listed with listParser() method.
    
ACKNOWLEDGEMENTS

 * VBW sentence parser written by Jeremy Wilson / ESRG LLC.
 